Fix vertical overflow on mobile

--- a/static/style.css
+++ b/static/style.css
@@ -14,8 +14,8 @@ body {
 }
 
 .full {
-    height: 100vh;
-    min-height: 20em;
+    min-height: 100vh;
+    /*min-height: 20em;*/
     width: 100%;
     display: flex;
     justify-content: center;
